# Topside

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  n10e.toml  topside.toml
.codex/environments/: environment.toml
.dev-workspace/: n10e.toml
.dev-workspace/.n10e/: index.sqlite  index.sqlite-shm  index.sqlite-wal
.dev-workspace/projects/: prj_01KJEH7ERYN87F9NFNZW7N12A4-n10e-01.md
.github/workflows/: ci.yml  release.yml
.topside/: index.sqlite  index.sqlite-shm  window-state.json
Formula/: n10e.rb  topside.rb
agents/prj_01KJEH7ERYN87F9NFNZW7N12A4/: ags_01KK5PFV3V9XJNPWGD8AVZBKR1.md  ags_01KK5PGM7J5HR55A0W8B1ZCXS2.md  ags_01KK5PGM7K1SY2J6B30MDNQ0DD.md  ags_01KK5PGM7KEQVQX0RYCTN78YG2.md  (+100 more)
docs/: .to-do.n10e-sync.json  .to-do.topside-sync.json  ARCHITECTURE.md  COMPATIBILITY.md  Launch.md  MCP.md  MIGRATIONS.md  PERFORMANCE.md  PRODUCT_DIRECTION.md  PROJECT.md  RELEASE.md  RENAMING.md  ROADMAP.md  SCHEMA.md  SYNC.md  to-do.md
examples/: n10e.toml  topside.toml
projects/: prj_01KJNCW3W9P9QH31E5Z975MECP-docwarp.md  prj_01KJY0VXJZ2Y9TXZCFCRRZ7KCK-sample.md
scripts/: bench_5k.sh  codex-session-smoke.sh  open-topside-app.sh  package-macos-release.sh  render-homebrew-formula.sh  run-social-demo.sh
src/: activity.rs  bench.rs  bundle.rs  codex.rs  config.rs  constants.rs  db.rs  desktop.rs  dev.rs  doctor.rs  git.rs  http.rs  indexer.rs  lib.rs  main.rs  markdown.rs  mcp.rs  ports.rs  repo_sync.rs  service.rs  task_sync.rs  types.rs
templates/: index.html
tests/: http_integration.rs  mcp_compat_integration.rs  service_integration.rs
(+728 files in other folders)
