[package]
name = "n10e"
version = "0.1.0"
edition = "2024"
description = "Agent-native local project management and note knowledge hub"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthonymarti/n10e-01"

[dependencies]
anyhow = "1.0"
askama = "0.12"
axum = { version = "0.8", features = ["macros", "json", "form"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
notify = "6.1"
pulldown-cmark = "0.13"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ulid = "1.2"
walkdir = "2.5"
thiserror = "2.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.17.1", default-features = false }
tao = "0.34.5"
window-vibrancy = "0.6.0"
wry = { version = "0.54.2", default-features = false, features = ["transparent"] }
